--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,18 @@
 .modal {
-  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   top: 0;
+  width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.4);
-  display: none; /* Default hidden */
 }
 
 .modal.hidden {
-  display: none; /* Ensures hidden class works */
+  display: none;
 }
+
 
 .modal-content {
   width: 70%;
